// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib graphql getFields() returns list of type fields 1`] = `
Array [
  Object {
    "args": Array [
      Object {
        "astNode": Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 1025,
            "start": 1006,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 1011,
              "start": 1006,
            },
            "value": "input",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 1025,
              "start": 1013,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 1025,
                "start": 1013,
              },
              "value": "TweetContent",
            },
          },
        },
        "defaultValue": undefined,
        "description": undefined,
        "extensions": undefined,
        "name": "input",
        "type": "TweetContent",
      },
    ],
    "astNode": Object {
      "arguments": Array [
        Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 1025,
            "start": 1006,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 1011,
              "start": 1006,
            },
            "value": "input",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 1025,
              "start": 1013,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 1025,
                "start": 1013,
              },
              "value": "TweetContent",
            },
          },
        },
      ],
      "description": undefined,
      "directives": Array [],
      "kind": "FieldDefinition",
      "loc": Object {
        "end": 1038,
        "start": 984,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 995,
          "start": 984,
        },
        "value": "createTweet",
      },
      "type": Object {
        "kind": "NamedType",
        "loc": Object {
          "end": 1038,
          "start": 1033,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 1038,
            "start": 1033,
          },
          "value": "Tweet",
        },
      },
    },
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "createTweet",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "Tweet",
  },
  Object {
    "args": Array [
      Object {
        "astNode": Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 1062,
            "start": 1055,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 1057,
              "start": 1055,
            },
            "value": "id",
          },
          "type": Object {
            "kind": "NonNullType",
            "loc": Object {
              "end": 1062,
              "start": 1059,
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 1061,
                "start": 1059,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1061,
                  "start": 1059,
                },
                "value": "ID",
              },
            },
          },
        },
        "defaultValue": undefined,
        "description": undefined,
        "extensions": undefined,
        "name": "id",
        "type": "ID!",
      },
    ],
    "astNode": Object {
      "arguments": Array [
        Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 1062,
            "start": 1055,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 1057,
              "start": 1055,
            },
            "value": "id",
          },
          "type": Object {
            "kind": "NonNullType",
            "loc": Object {
              "end": 1062,
              "start": 1059,
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 1061,
                "start": 1059,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1061,
                  "start": 1059,
                },
                "value": "ID",
              },
            },
          },
        },
      ],
      "description": undefined,
      "directives": Array [],
      "kind": "FieldDefinition",
      "loc": Object {
        "end": 1070,
        "start": 1043,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 1054,
          "start": 1043,
        },
        "value": "deleteTweet",
      },
      "type": Object {
        "kind": "NamedType",
        "loc": Object {
          "end": 1070,
          "start": 1065,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 1070,
            "start": 1065,
          },
          "value": "Tweet",
        },
      },
    },
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "deleteTweet",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "Tweet",
  },
  Object {
    "args": Array [
      Object {
        "astNode": Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 1096,
            "start": 1089,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 1091,
              "start": 1089,
            },
            "value": "id",
          },
          "type": Object {
            "kind": "NonNullType",
            "loc": Object {
              "end": 1096,
              "start": 1093,
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 1095,
                "start": 1093,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1095,
                  "start": 1093,
                },
                "value": "ID",
              },
            },
          },
        },
        "defaultValue": undefined,
        "description": undefined,
        "extensions": undefined,
        "name": "id",
        "type": "ID!",
      },
    ],
    "astNode": Object {
      "arguments": Array [
        Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 1096,
            "start": 1089,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 1091,
              "start": 1089,
            },
            "value": "id",
          },
          "type": Object {
            "kind": "NonNullType",
            "loc": Object {
              "end": 1096,
              "start": 1093,
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 1095,
                "start": 1093,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1095,
                  "start": 1093,
                },
                "value": "ID",
              },
            },
          },
        },
      ],
      "description": undefined,
      "directives": Array [],
      "kind": "FieldDefinition",
      "loc": Object {
        "end": 1106,
        "start": 1075,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 1088,
          "start": 1075,
        },
        "value": "markTweetRead",
      },
      "type": Object {
        "kind": "NamedType",
        "loc": Object {
          "end": 1106,
          "start": 1099,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 1106,
            "start": 1099,
          },
          "value": "Boolean",
        },
      },
    },
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "markTweetRead",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "Boolean",
  },
]
`;

exports[`lib graphql getFilteredTypeMap() returns a filtered map of schema types 1`] = `
Object {
  "Boolean": "Boolean",
  "Date": "Date",
  "ID": "ID",
  "Int": "Int",
  "Meta": "Meta",
  "Node": "Node",
  "Notification": "Notification",
  "Stat": "Stat",
  "String": "String",
  "Tweet": "Tweet",
  "TweetContent": "TweetContent",
  "Url": "Url",
  "User": "User",
}
`;

exports[`lib graphql getIntrospectionFieldsList() returns list of mutations 1`] = `
Object {
  "createTweet": Object {
    "args": Array [
      Object {
        "astNode": Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 1025,
            "start": 1006,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 1011,
              "start": 1006,
            },
            "value": "input",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 1025,
              "start": 1013,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 1025,
                "start": 1013,
              },
              "value": "TweetContent",
            },
          },
        },
        "defaultValue": undefined,
        "description": undefined,
        "extensions": undefined,
        "name": "input",
        "type": "TweetContent",
      },
    ],
    "astNode": Object {
      "arguments": Array [
        Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 1025,
            "start": 1006,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 1011,
              "start": 1006,
            },
            "value": "input",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 1025,
              "start": 1013,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 1025,
                "start": 1013,
              },
              "value": "TweetContent",
            },
          },
        },
      ],
      "description": undefined,
      "directives": Array [],
      "kind": "FieldDefinition",
      "loc": Object {
        "end": 1038,
        "start": 984,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 995,
          "start": 984,
        },
        "value": "createTweet",
      },
      "type": Object {
        "kind": "NamedType",
        "loc": Object {
          "end": 1038,
          "start": 1033,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 1038,
            "start": 1033,
          },
          "value": "Tweet",
        },
      },
    },
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "createTweet",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "Tweet",
  },
  "deleteTweet": Object {
    "args": Array [
      Object {
        "astNode": Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 1062,
            "start": 1055,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 1057,
              "start": 1055,
            },
            "value": "id",
          },
          "type": Object {
            "kind": "NonNullType",
            "loc": Object {
              "end": 1062,
              "start": 1059,
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 1061,
                "start": 1059,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1061,
                  "start": 1059,
                },
                "value": "ID",
              },
            },
          },
        },
        "defaultValue": undefined,
        "description": undefined,
        "extensions": undefined,
        "name": "id",
        "type": "ID!",
      },
    ],
    "astNode": Object {
      "arguments": Array [
        Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 1062,
            "start": 1055,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 1057,
              "start": 1055,
            },
            "value": "id",
          },
          "type": Object {
            "kind": "NonNullType",
            "loc": Object {
              "end": 1062,
              "start": 1059,
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 1061,
                "start": 1059,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1061,
                  "start": 1059,
                },
                "value": "ID",
              },
            },
          },
        },
      ],
      "description": undefined,
      "directives": Array [],
      "kind": "FieldDefinition",
      "loc": Object {
        "end": 1070,
        "start": 1043,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 1054,
          "start": 1043,
        },
        "value": "deleteTweet",
      },
      "type": Object {
        "kind": "NamedType",
        "loc": Object {
          "end": 1070,
          "start": 1065,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 1070,
            "start": 1065,
          },
          "value": "Tweet",
        },
      },
    },
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "deleteTweet",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "Tweet",
  },
  "markTweetRead": Object {
    "args": Array [
      Object {
        "astNode": Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 1096,
            "start": 1089,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 1091,
              "start": 1089,
            },
            "value": "id",
          },
          "type": Object {
            "kind": "NonNullType",
            "loc": Object {
              "end": 1096,
              "start": 1093,
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 1095,
                "start": 1093,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1095,
                  "start": 1093,
                },
                "value": "ID",
              },
            },
          },
        },
        "defaultValue": undefined,
        "description": undefined,
        "extensions": undefined,
        "name": "id",
        "type": "ID!",
      },
    ],
    "astNode": Object {
      "arguments": Array [
        Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 1096,
            "start": 1089,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 1091,
              "start": 1089,
            },
            "value": "id",
          },
          "type": Object {
            "kind": "NonNullType",
            "loc": Object {
              "end": 1096,
              "start": 1093,
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 1095,
                "start": 1093,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1095,
                  "start": 1093,
                },
                "value": "ID",
              },
            },
          },
        },
      ],
      "description": undefined,
      "directives": Array [],
      "kind": "FieldDefinition",
      "loc": Object {
        "end": 1106,
        "start": 1075,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 1088,
          "start": 1075,
        },
        "value": "markTweetRead",
      },
      "type": Object {
        "kind": "NamedType",
        "loc": Object {
          "end": 1106,
          "start": 1099,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 1106,
            "start": 1099,
          },
          "value": "Boolean",
        },
      },
    },
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "markTweetRead",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "Boolean",
  },
}
`;

exports[`lib graphql getIntrospectionFieldsList() returns list of queries 1`] = `
Object {
  "NotificationsMeta": Object {
    "args": Array [],
    "astNode": Object {
      "arguments": Array [],
      "description": undefined,
      "directives": Array [],
      "kind": "FieldDefinition",
      "loc": Object {
        "end": 960,
        "start": 937,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 954,
          "start": 937,
        },
        "value": "NotificationsMeta",
      },
      "type": Object {
        "kind": "NamedType",
        "loc": Object {
          "end": 960,
          "start": 956,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 960,
            "start": 956,
          },
          "value": "Meta",
        },
      },
    },
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "NotificationsMeta",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "Meta",
  },
  "Tweet": Object {
    "args": Array [
      Object {
        "astNode": Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 748,
            "start": 741,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 743,
              "start": 741,
            },
            "value": "id",
          },
          "type": Object {
            "kind": "NonNullType",
            "loc": Object {
              "end": 748,
              "start": 745,
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 747,
                "start": 745,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 747,
                  "start": 745,
                },
                "value": "ID",
              },
            },
          },
        },
        "defaultValue": undefined,
        "description": undefined,
        "extensions": undefined,
        "name": "id",
        "type": "ID!",
      },
    ],
    "astNode": Object {
      "arguments": Array [
        Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 748,
            "start": 741,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 743,
              "start": 741,
            },
            "value": "id",
          },
          "type": Object {
            "kind": "NonNullType",
            "loc": Object {
              "end": 748,
              "start": 745,
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 747,
                "start": 745,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 747,
                  "start": 745,
                },
                "value": "ID",
              },
            },
          },
        },
      ],
      "description": undefined,
      "directives": Array [],
      "kind": "FieldDefinition",
      "loc": Object {
        "end": 756,
        "start": 735,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 740,
          "start": 735,
        },
        "value": "Tweet",
      },
      "type": Object {
        "kind": "NamedType",
        "loc": Object {
          "end": 756,
          "start": 751,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 756,
            "start": 751,
          },
          "value": "Tweet",
        },
      },
    },
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "Tweet",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "Tweet",
  },
  "Tweets": Object {
    "args": Array [
      Object {
        "astNode": Object {
          "defaultValue": Object {
            "kind": "IntValue",
            "loc": Object {
              "end": 782,
              "start": 781,
            },
            "value": "5",
          },
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 782,
            "start": 768,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 773,
              "start": 768,
            },
            "value": "limit",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 778,
              "start": 775,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 778,
                "start": 775,
              },
              "value": "Int",
            },
          },
        },
        "defaultValue": 5,
        "description": undefined,
        "extensions": undefined,
        "name": "limit",
        "type": "Int",
      },
      Object {
        "astNode": Object {
          "defaultValue": Object {
            "kind": "IntValue",
            "loc": Object {
              "end": 797,
              "start": 796,
            },
            "value": "0",
          },
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 797,
            "start": 784,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 788,
              "start": 784,
            },
            "value": "skip",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 793,
              "start": 790,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 793,
                "start": 790,
              },
              "value": "Int",
            },
          },
        },
        "defaultValue": 0,
        "description": undefined,
        "extensions": undefined,
        "name": "skip",
        "type": "Int",
      },
      Object {
        "astNode": Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 817,
            "start": 799,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 809,
              "start": 799,
            },
            "value": "sort_field",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 817,
              "start": 811,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 817,
                "start": 811,
              },
              "value": "String",
            },
          },
        },
        "defaultValue": undefined,
        "description": undefined,
        "extensions": undefined,
        "name": "sort_field",
        "type": "String",
      },
      Object {
        "astNode": Object {
          "defaultValue": Object {
            "block": false,
            "kind": "StringValue",
            "loc": Object {
              "end": 845,
              "start": 840,
            },
            "value": "ASC",
          },
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 845,
            "start": 819,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 829,
              "start": 819,
            },
            "value": "sort_order",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 837,
              "start": 831,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 837,
                "start": 831,
              },
              "value": "String",
            },
          },
        },
        "defaultValue": "ASC",
        "description": undefined,
        "extensions": undefined,
        "name": "sort_order",
        "type": "String",
      },
    ],
    "astNode": Object {
      "arguments": Array [
        Object {
          "defaultValue": Object {
            "kind": "IntValue",
            "loc": Object {
              "end": 782,
              "start": 781,
            },
            "value": "5",
          },
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 782,
            "start": 768,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 773,
              "start": 768,
            },
            "value": "limit",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 778,
              "start": 775,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 778,
                "start": 775,
              },
              "value": "Int",
            },
          },
        },
        Object {
          "defaultValue": Object {
            "kind": "IntValue",
            "loc": Object {
              "end": 797,
              "start": 796,
            },
            "value": "0",
          },
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 797,
            "start": 784,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 788,
              "start": 784,
            },
            "value": "skip",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 793,
              "start": 790,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 793,
                "start": 790,
              },
              "value": "Int",
            },
          },
        },
        Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 817,
            "start": 799,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 809,
              "start": 799,
            },
            "value": "sort_field",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 817,
              "start": 811,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 817,
                "start": 811,
              },
              "value": "String",
            },
          },
        },
        Object {
          "defaultValue": Object {
            "block": false,
            "kind": "StringValue",
            "loc": Object {
              "end": 845,
              "start": 840,
            },
            "value": "ASC",
          },
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 845,
            "start": 819,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 829,
              "start": 819,
            },
            "value": "sort_order",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 837,
              "start": 831,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 837,
                "start": 831,
              },
              "value": "String",
            },
          },
        },
      ],
      "description": undefined,
      "directives": Array [],
      "kind": "FieldDefinition",
      "loc": Object {
        "end": 856,
        "start": 761,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 767,
          "start": 761,
        },
        "value": "Tweets",
      },
      "type": Object {
        "kind": "NonNullType",
        "loc": Object {
          "end": 856,
          "start": 848,
        },
        "type": Object {
          "kind": "ListType",
          "loc": Object {
            "end": 855,
            "start": 848,
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 854,
              "start": 849,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 854,
                "start": 849,
              },
              "value": "Tweet",
            },
          },
        },
      },
    },
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "Tweets",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "[Tweet]!",
  },
  "TweetsMeta": Object {
    "args": Array [],
    "astNode": Object {
      "arguments": Array [],
      "description": undefined,
      "directives": Array [],
      "kind": "FieldDefinition",
      "loc": Object {
        "end": 877,
        "start": 861,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 871,
          "start": 861,
        },
        "value": "TweetsMeta",
      },
      "type": Object {
        "kind": "NamedType",
        "loc": Object {
          "end": 877,
          "start": 873,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 877,
            "start": 873,
          },
          "value": "Meta",
        },
      },
    },
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "TweetsMeta",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "Meta",
  },
  "User": Object {
    "args": Array [
      Object {
        "astNode": Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 894,
            "start": 887,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 889,
              "start": 887,
            },
            "value": "id",
          },
          "type": Object {
            "kind": "NonNullType",
            "loc": Object {
              "end": 894,
              "start": 891,
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 893,
                "start": 891,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 893,
                  "start": 891,
                },
                "value": "ID",
              },
            },
          },
        },
        "defaultValue": undefined,
        "description": undefined,
        "extensions": undefined,
        "name": "id",
        "type": "ID!",
      },
    ],
    "astNode": Object {
      "arguments": Array [
        Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 894,
            "start": 887,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 889,
              "start": 887,
            },
            "value": "id",
          },
          "type": Object {
            "kind": "NonNullType",
            "loc": Object {
              "end": 894,
              "start": 891,
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 893,
                "start": 891,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 893,
                  "start": 891,
                },
                "value": "ID",
              },
            },
          },
        },
      ],
      "description": undefined,
      "directives": Array [],
      "kind": "FieldDefinition",
      "loc": Object {
        "end": 901,
        "start": 882,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 886,
          "start": 882,
        },
        "value": "User",
      },
      "type": Object {
        "kind": "NamedType",
        "loc": Object {
          "end": 901,
          "start": 897,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 901,
            "start": 897,
          },
          "value": "User",
        },
      },
    },
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "User",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "User",
  },
  "Users": Object {
    "args": Array [
      Object {
        "astNode": Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 922,
            "start": 912,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 914,
              "start": 912,
            },
            "value": "id",
          },
          "type": Object {
            "kind": "NonNullType",
            "loc": Object {
              "end": 922,
              "start": 916,
            },
            "type": Object {
              "kind": "ListType",
              "loc": Object {
                "end": 921,
                "start": 916,
              },
              "type": Object {
                "kind": "NonNullType",
                "loc": Object {
                  "end": 920,
                  "start": 917,
                },
                "type": Object {
                  "kind": "NamedType",
                  "loc": Object {
                    "end": 919,
                    "start": 917,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 919,
                      "start": 917,
                    },
                    "value": "ID",
                  },
                },
              },
            },
          },
        },
        "defaultValue": undefined,
        "description": undefined,
        "extensions": undefined,
        "name": "id",
        "type": "[ID!]!",
      },
    ],
    "astNode": Object {
      "arguments": Array [
        Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 922,
            "start": 912,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 914,
              "start": 912,
            },
            "value": "id",
          },
          "type": Object {
            "kind": "NonNullType",
            "loc": Object {
              "end": 922,
              "start": 916,
            },
            "type": Object {
              "kind": "ListType",
              "loc": Object {
                "end": 921,
                "start": 916,
              },
              "type": Object {
                "kind": "NonNullType",
                "loc": Object {
                  "end": 920,
                  "start": 917,
                },
                "type": Object {
                  "kind": "NamedType",
                  "loc": Object {
                    "end": 919,
                    "start": 917,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 919,
                      "start": 917,
                    },
                    "value": "ID",
                  },
                },
              },
            },
          },
        },
      ],
      "description": undefined,
      "directives": Array [],
      "kind": "FieldDefinition",
      "loc": Object {
        "end": 932,
        "start": 906,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 911,
          "start": 906,
        },
        "value": "Users",
      },
      "type": Object {
        "kind": "NonNullType",
        "loc": Object {
          "end": 932,
          "start": 925,
        },
        "type": Object {
          "kind": "ListType",
          "loc": Object {
            "end": 931,
            "start": 925,
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 930,
              "start": 926,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 930,
                "start": 926,
              },
              "value": "User",
            },
          },
        },
      },
    },
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "Users",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "[User]!",
  },
}
`;

exports[`lib graphql getIntrospectionFieldsList() returns list of subscriptions 1`] = `
Object {
  "Notifications": Object {
    "args": Array [
      Object {
        "astNode": Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 1197,
            "start": 1187,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 1192,
              "start": 1187,
            },
            "value": "limit",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 1197,
              "start": 1194,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 1197,
                "start": 1194,
              },
              "value": "Int",
            },
          },
        },
        "defaultValue": undefined,
        "description": undefined,
        "extensions": undefined,
        "name": "limit",
        "type": "Int",
      },
    ],
    "astNode": Object {
      "arguments": Array [
        Object {
          "defaultValue": undefined,
          "description": undefined,
          "directives": Array [],
          "kind": "InputValueDefinition",
          "loc": Object {
            "end": 1197,
            "start": 1187,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 1192,
              "start": 1187,
            },
            "value": "limit",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 1197,
              "start": 1194,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 1197,
                "start": 1194,
              },
              "value": "Int",
            },
          },
        },
      ],
      "description": undefined,
      "directives": Array [],
      "kind": "FieldDefinition",
      "loc": Object {
        "end": 1215,
        "start": 1173,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 1186,
          "start": 1173,
        },
        "value": "Notifications",
      },
      "type": Object {
        "kind": "NonNullType",
        "loc": Object {
          "end": 1215,
          "start": 1200,
        },
        "type": Object {
          "kind": "ListType",
          "loc": Object {
            "end": 1214,
            "start": 1200,
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 1213,
              "start": 1201,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 1213,
                "start": 1201,
              },
              "value": "Notification",
            },
          },
        },
      },
    },
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "Notifications",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "[Notification]!",
  },
}
`;

exports[`lib graphql getSchemaMap() returns schema types map 1`] = `
Object {
  "directives": Array [
    "@skip",
    "@include",
    "@deprecated",
    "@specifiedBy",
  ],
  "enums": Object {},
  "inputs": Object {
    "TweetContent": "TweetContent",
  },
  "interfaces": Object {
    "Node": "Node",
  },
  "mutations": Object {
    "createTweet": Object {
      "args": Array [
        Object {
          "astNode": Object {
            "defaultValue": undefined,
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 1025,
              "start": 1006,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 1011,
                "start": 1006,
              },
              "value": "input",
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 1025,
                "start": 1013,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1025,
                  "start": 1013,
                },
                "value": "TweetContent",
              },
            },
          },
          "defaultValue": undefined,
          "description": undefined,
          "extensions": undefined,
          "name": "input",
          "type": "TweetContent",
        },
      ],
      "astNode": Object {
        "arguments": Array [
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 1025,
              "start": 1006,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 1011,
                "start": 1006,
              },
              "value": "input",
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 1025,
                "start": 1013,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1025,
                  "start": 1013,
                },
                "value": "TweetContent",
              },
            },
          },
        ],
        "description": undefined,
        "directives": Array [],
        "kind": "FieldDefinition",
        "loc": Object {
          "end": 1038,
          "start": 984,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 995,
            "start": 984,
          },
          "value": "createTweet",
        },
        "type": Object {
          "kind": "NamedType",
          "loc": Object {
            "end": 1038,
            "start": 1033,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 1038,
              "start": 1033,
            },
            "value": "Tweet",
          },
        },
      },
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "isDeprecated": false,
      "name": "createTweet",
      "resolve": undefined,
      "subscribe": undefined,
      "type": "Tweet",
    },
    "deleteTweet": Object {
      "args": Array [
        Object {
          "astNode": Object {
            "defaultValue": undefined,
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 1062,
              "start": 1055,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 1057,
                "start": 1055,
              },
              "value": "id",
            },
            "type": Object {
              "kind": "NonNullType",
              "loc": Object {
                "end": 1062,
                "start": 1059,
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 1061,
                  "start": 1059,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 1061,
                    "start": 1059,
                  },
                  "value": "ID",
                },
              },
            },
          },
          "defaultValue": undefined,
          "description": undefined,
          "extensions": undefined,
          "name": "id",
          "type": "ID!",
        },
      ],
      "astNode": Object {
        "arguments": Array [
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 1062,
              "start": 1055,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 1057,
                "start": 1055,
              },
              "value": "id",
            },
            "type": Object {
              "kind": "NonNullType",
              "loc": Object {
                "end": 1062,
                "start": 1059,
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 1061,
                  "start": 1059,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 1061,
                    "start": 1059,
                  },
                  "value": "ID",
                },
              },
            },
          },
        ],
        "description": undefined,
        "directives": Array [],
        "kind": "FieldDefinition",
        "loc": Object {
          "end": 1070,
          "start": 1043,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 1054,
            "start": 1043,
          },
          "value": "deleteTweet",
        },
        "type": Object {
          "kind": "NamedType",
          "loc": Object {
            "end": 1070,
            "start": 1065,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 1070,
              "start": 1065,
            },
            "value": "Tweet",
          },
        },
      },
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "isDeprecated": false,
      "name": "deleteTweet",
      "resolve": undefined,
      "subscribe": undefined,
      "type": "Tweet",
    },
    "markTweetRead": Object {
      "args": Array [
        Object {
          "astNode": Object {
            "defaultValue": undefined,
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 1096,
              "start": 1089,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 1091,
                "start": 1089,
              },
              "value": "id",
            },
            "type": Object {
              "kind": "NonNullType",
              "loc": Object {
                "end": 1096,
                "start": 1093,
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 1095,
                  "start": 1093,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 1095,
                    "start": 1093,
                  },
                  "value": "ID",
                },
              },
            },
          },
          "defaultValue": undefined,
          "description": undefined,
          "extensions": undefined,
          "name": "id",
          "type": "ID!",
        },
      ],
      "astNode": Object {
        "arguments": Array [
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 1096,
              "start": 1089,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 1091,
                "start": 1089,
              },
              "value": "id",
            },
            "type": Object {
              "kind": "NonNullType",
              "loc": Object {
                "end": 1096,
                "start": 1093,
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 1095,
                  "start": 1093,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 1095,
                    "start": 1093,
                  },
                  "value": "ID",
                },
              },
            },
          },
        ],
        "description": undefined,
        "directives": Array [],
        "kind": "FieldDefinition",
        "loc": Object {
          "end": 1106,
          "start": 1075,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 1088,
            "start": 1075,
          },
          "value": "markTweetRead",
        },
        "type": Object {
          "kind": "NamedType",
          "loc": Object {
            "end": 1106,
            "start": 1099,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 1106,
              "start": 1099,
            },
            "value": "Boolean",
          },
        },
      },
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "isDeprecated": false,
      "name": "markTweetRead",
      "resolve": undefined,
      "subscribe": undefined,
      "type": "Boolean",
    },
  },
  "objects": Object {
    "Meta": "Meta",
    "Notification": "Notification",
    "Stat": "Stat",
    "Tweet": "Tweet",
    "User": "User",
  },
  "queries": Object {
    "NotificationsMeta": Object {
      "args": Array [],
      "astNode": Object {
        "arguments": Array [],
        "description": undefined,
        "directives": Array [],
        "kind": "FieldDefinition",
        "loc": Object {
          "end": 960,
          "start": 937,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 954,
            "start": 937,
          },
          "value": "NotificationsMeta",
        },
        "type": Object {
          "kind": "NamedType",
          "loc": Object {
            "end": 960,
            "start": 956,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 960,
              "start": 956,
            },
            "value": "Meta",
          },
        },
      },
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "isDeprecated": false,
      "name": "NotificationsMeta",
      "resolve": undefined,
      "subscribe": undefined,
      "type": "Meta",
    },
    "Tweet": Object {
      "args": Array [
        Object {
          "astNode": Object {
            "defaultValue": undefined,
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 748,
              "start": 741,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 743,
                "start": 741,
              },
              "value": "id",
            },
            "type": Object {
              "kind": "NonNullType",
              "loc": Object {
                "end": 748,
                "start": 745,
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 747,
                  "start": 745,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 747,
                    "start": 745,
                  },
                  "value": "ID",
                },
              },
            },
          },
          "defaultValue": undefined,
          "description": undefined,
          "extensions": undefined,
          "name": "id",
          "type": "ID!",
        },
      ],
      "astNode": Object {
        "arguments": Array [
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 748,
              "start": 741,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 743,
                "start": 741,
              },
              "value": "id",
            },
            "type": Object {
              "kind": "NonNullType",
              "loc": Object {
                "end": 748,
                "start": 745,
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 747,
                  "start": 745,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 747,
                    "start": 745,
                  },
                  "value": "ID",
                },
              },
            },
          },
        ],
        "description": undefined,
        "directives": Array [],
        "kind": "FieldDefinition",
        "loc": Object {
          "end": 756,
          "start": 735,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 740,
            "start": 735,
          },
          "value": "Tweet",
        },
        "type": Object {
          "kind": "NamedType",
          "loc": Object {
            "end": 756,
            "start": 751,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 756,
              "start": 751,
            },
            "value": "Tweet",
          },
        },
      },
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "isDeprecated": false,
      "name": "Tweet",
      "resolve": undefined,
      "subscribe": undefined,
      "type": "Tweet",
    },
    "Tweets": Object {
      "args": Array [
        Object {
          "astNode": Object {
            "defaultValue": Object {
              "kind": "IntValue",
              "loc": Object {
                "end": 782,
                "start": 781,
              },
              "value": "5",
            },
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 782,
              "start": 768,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 773,
                "start": 768,
              },
              "value": "limit",
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 778,
                "start": 775,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 778,
                  "start": 775,
                },
                "value": "Int",
              },
            },
          },
          "defaultValue": 5,
          "description": undefined,
          "extensions": undefined,
          "name": "limit",
          "type": "Int",
        },
        Object {
          "astNode": Object {
            "defaultValue": Object {
              "kind": "IntValue",
              "loc": Object {
                "end": 797,
                "start": 796,
              },
              "value": "0",
            },
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 797,
              "start": 784,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 788,
                "start": 784,
              },
              "value": "skip",
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 793,
                "start": 790,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 793,
                  "start": 790,
                },
                "value": "Int",
              },
            },
          },
          "defaultValue": 0,
          "description": undefined,
          "extensions": undefined,
          "name": "skip",
          "type": "Int",
        },
        Object {
          "astNode": Object {
            "defaultValue": undefined,
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 817,
              "start": 799,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 809,
                "start": 799,
              },
              "value": "sort_field",
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 817,
                "start": 811,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 817,
                  "start": 811,
                },
                "value": "String",
              },
            },
          },
          "defaultValue": undefined,
          "description": undefined,
          "extensions": undefined,
          "name": "sort_field",
          "type": "String",
        },
        Object {
          "astNode": Object {
            "defaultValue": Object {
              "block": false,
              "kind": "StringValue",
              "loc": Object {
                "end": 845,
                "start": 840,
              },
              "value": "ASC",
            },
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 845,
              "start": 819,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 829,
                "start": 819,
              },
              "value": "sort_order",
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 837,
                "start": 831,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 837,
                  "start": 831,
                },
                "value": "String",
              },
            },
          },
          "defaultValue": "ASC",
          "description": undefined,
          "extensions": undefined,
          "name": "sort_order",
          "type": "String",
        },
      ],
      "astNode": Object {
        "arguments": Array [
          Object {
            "defaultValue": Object {
              "kind": "IntValue",
              "loc": Object {
                "end": 782,
                "start": 781,
              },
              "value": "5",
            },
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 782,
              "start": 768,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 773,
                "start": 768,
              },
              "value": "limit",
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 778,
                "start": 775,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 778,
                  "start": 775,
                },
                "value": "Int",
              },
            },
          },
          Object {
            "defaultValue": Object {
              "kind": "IntValue",
              "loc": Object {
                "end": 797,
                "start": 796,
              },
              "value": "0",
            },
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 797,
              "start": 784,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 788,
                "start": 784,
              },
              "value": "skip",
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 793,
                "start": 790,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 793,
                  "start": 790,
                },
                "value": "Int",
              },
            },
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 817,
              "start": 799,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 809,
                "start": 799,
              },
              "value": "sort_field",
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 817,
                "start": 811,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 817,
                  "start": 811,
                },
                "value": "String",
              },
            },
          },
          Object {
            "defaultValue": Object {
              "block": false,
              "kind": "StringValue",
              "loc": Object {
                "end": 845,
                "start": 840,
              },
              "value": "ASC",
            },
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 845,
              "start": 819,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 829,
                "start": 819,
              },
              "value": "sort_order",
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 837,
                "start": 831,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 837,
                  "start": 831,
                },
                "value": "String",
              },
            },
          },
        ],
        "description": undefined,
        "directives": Array [],
        "kind": "FieldDefinition",
        "loc": Object {
          "end": 856,
          "start": 761,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 767,
            "start": 761,
          },
          "value": "Tweets",
        },
        "type": Object {
          "kind": "NonNullType",
          "loc": Object {
            "end": 856,
            "start": 848,
          },
          "type": Object {
            "kind": "ListType",
            "loc": Object {
              "end": 855,
              "start": 848,
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 854,
                "start": 849,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 854,
                  "start": 849,
                },
                "value": "Tweet",
              },
            },
          },
        },
      },
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "isDeprecated": false,
      "name": "Tweets",
      "resolve": undefined,
      "subscribe": undefined,
      "type": "[Tweet]!",
    },
    "TweetsMeta": Object {
      "args": Array [],
      "astNode": Object {
        "arguments": Array [],
        "description": undefined,
        "directives": Array [],
        "kind": "FieldDefinition",
        "loc": Object {
          "end": 877,
          "start": 861,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 871,
            "start": 861,
          },
          "value": "TweetsMeta",
        },
        "type": Object {
          "kind": "NamedType",
          "loc": Object {
            "end": 877,
            "start": 873,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 877,
              "start": 873,
            },
            "value": "Meta",
          },
        },
      },
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "isDeprecated": false,
      "name": "TweetsMeta",
      "resolve": undefined,
      "subscribe": undefined,
      "type": "Meta",
    },
    "User": Object {
      "args": Array [
        Object {
          "astNode": Object {
            "defaultValue": undefined,
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 894,
              "start": 887,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 889,
                "start": 887,
              },
              "value": "id",
            },
            "type": Object {
              "kind": "NonNullType",
              "loc": Object {
                "end": 894,
                "start": 891,
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 893,
                  "start": 891,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 893,
                    "start": 891,
                  },
                  "value": "ID",
                },
              },
            },
          },
          "defaultValue": undefined,
          "description": undefined,
          "extensions": undefined,
          "name": "id",
          "type": "ID!",
        },
      ],
      "astNode": Object {
        "arguments": Array [
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 894,
              "start": 887,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 889,
                "start": 887,
              },
              "value": "id",
            },
            "type": Object {
              "kind": "NonNullType",
              "loc": Object {
                "end": 894,
                "start": 891,
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 893,
                  "start": 891,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 893,
                    "start": 891,
                  },
                  "value": "ID",
                },
              },
            },
          },
        ],
        "description": undefined,
        "directives": Array [],
        "kind": "FieldDefinition",
        "loc": Object {
          "end": 901,
          "start": 882,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 886,
            "start": 882,
          },
          "value": "User",
        },
        "type": Object {
          "kind": "NamedType",
          "loc": Object {
            "end": 901,
            "start": 897,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 901,
              "start": 897,
            },
            "value": "User",
          },
        },
      },
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "isDeprecated": false,
      "name": "User",
      "resolve": undefined,
      "subscribe": undefined,
      "type": "User",
    },
    "Users": Object {
      "args": Array [
        Object {
          "astNode": Object {
            "defaultValue": undefined,
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 922,
              "start": 912,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 914,
                "start": 912,
              },
              "value": "id",
            },
            "type": Object {
              "kind": "NonNullType",
              "loc": Object {
                "end": 922,
                "start": 916,
              },
              "type": Object {
                "kind": "ListType",
                "loc": Object {
                  "end": 921,
                  "start": 916,
                },
                "type": Object {
                  "kind": "NonNullType",
                  "loc": Object {
                    "end": 920,
                    "start": 917,
                  },
                  "type": Object {
                    "kind": "NamedType",
                    "loc": Object {
                      "end": 919,
                      "start": 917,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 919,
                        "start": 917,
                      },
                      "value": "ID",
                    },
                  },
                },
              },
            },
          },
          "defaultValue": undefined,
          "description": undefined,
          "extensions": undefined,
          "name": "id",
          "type": "[ID!]!",
        },
      ],
      "astNode": Object {
        "arguments": Array [
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 922,
              "start": 912,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 914,
                "start": 912,
              },
              "value": "id",
            },
            "type": Object {
              "kind": "NonNullType",
              "loc": Object {
                "end": 922,
                "start": 916,
              },
              "type": Object {
                "kind": "ListType",
                "loc": Object {
                  "end": 921,
                  "start": 916,
                },
                "type": Object {
                  "kind": "NonNullType",
                  "loc": Object {
                    "end": 920,
                    "start": 917,
                  },
                  "type": Object {
                    "kind": "NamedType",
                    "loc": Object {
                      "end": 919,
                      "start": 917,
                    },
                    "name": Object {
                      "kind": "Name",
                      "loc": Object {
                        "end": 919,
                        "start": 917,
                      },
                      "value": "ID",
                    },
                  },
                },
              },
            },
          },
        ],
        "description": undefined,
        "directives": Array [],
        "kind": "FieldDefinition",
        "loc": Object {
          "end": 932,
          "start": 906,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 911,
            "start": 906,
          },
          "value": "Users",
        },
        "type": Object {
          "kind": "NonNullType",
          "loc": Object {
            "end": 932,
            "start": 925,
          },
          "type": Object {
            "kind": "ListType",
            "loc": Object {
              "end": 931,
              "start": 925,
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 930,
                "start": 926,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 930,
                  "start": 926,
                },
                "value": "User",
              },
            },
          },
        },
      },
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "isDeprecated": false,
      "name": "Users",
      "resolve": undefined,
      "subscribe": undefined,
      "type": "[User]!",
    },
  },
  "scalars": Object {
    "Boolean": "Boolean",
    "Date": "Date",
    "ID": "ID",
    "Int": "Int",
    "String": "String",
    "Url": "Url",
  },
  "subscriptions": Object {
    "Notifications": Object {
      "args": Array [
        Object {
          "astNode": Object {
            "defaultValue": undefined,
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 1197,
              "start": 1187,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 1192,
                "start": 1187,
              },
              "value": "limit",
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 1197,
                "start": 1194,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1197,
                  "start": 1194,
                },
                "value": "Int",
              },
            },
          },
          "defaultValue": undefined,
          "description": undefined,
          "extensions": undefined,
          "name": "limit",
          "type": "Int",
        },
      ],
      "astNode": Object {
        "arguments": Array [
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "directives": Array [],
            "kind": "InputValueDefinition",
            "loc": Object {
              "end": 1197,
              "start": 1187,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 1192,
                "start": 1187,
              },
              "value": "limit",
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 1197,
                "start": 1194,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1197,
                  "start": 1194,
                },
                "value": "Int",
              },
            },
          },
        ],
        "description": undefined,
        "directives": Array [],
        "kind": "FieldDefinition",
        "loc": Object {
          "end": 1215,
          "start": 1173,
        },
        "name": Object {
          "kind": "Name",
          "loc": Object {
            "end": 1186,
            "start": 1173,
          },
          "value": "Notifications",
        },
        "type": Object {
          "kind": "NonNullType",
          "loc": Object {
            "end": 1215,
            "start": 1200,
          },
          "type": Object {
            "kind": "ListType",
            "loc": Object {
              "end": 1214,
              "start": 1200,
            },
            "type": Object {
              "kind": "NamedType",
              "loc": Object {
                "end": 1213,
                "start": 1201,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 1213,
                  "start": 1201,
                },
                "value": "Notification",
              },
            },
          },
        },
      },
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": undefined,
      "isDeprecated": false,
      "name": "Notifications",
      "resolve": undefined,
      "subscribe": undefined,
      "type": "[Notification]!",
    },
  },
  "unions": Object {},
}
`;

exports[`lib graphql getTypeFromTypeMap() returns a filter map filtered by GraphQLEnumType 1`] = `
Object {
  "__DirectiveLocation": "__DirectiveLocation",
  "__TypeKind": "__TypeKind",
}
`;

exports[`lib graphql getTypeFromTypeMap() returns a filter map filtered by GraphQLInputObjectType 1`] = `
Object {
  "TweetContent": "TweetContent",
}
`;

exports[`lib graphql getTypeFromTypeMap() returns a filter map filtered by GraphQLInterfaceType 1`] = `
Object {
  "Node": "Node",
}
`;

exports[`lib graphql getTypeFromTypeMap() returns a filter map filtered by GraphQLObjectType 1`] = `
Object {
  "Meta": "Meta",
  "Mutation": "Mutation",
  "Notification": "Notification",
  "Query": "Query",
  "Stat": "Stat",
  "Subscription": "Subscription",
  "Tweet": "Tweet",
  "User": "User",
  "__Directive": "__Directive",
  "__EnumValue": "__EnumValue",
  "__Field": "__Field",
  "__InputValue": "__InputValue",
  "__Schema": "__Schema",
  "__Type": "__Type",
}
`;

exports[`lib graphql getTypeFromTypeMap() returns a filter map filtered by GraphQLScalarType 1`] = `
Object {
  "Boolean": "Boolean",
  "Date": "Date",
  "ID": "ID",
  "Int": "Int",
  "String": "String",
  "Url": "Url",
}
`;

exports[`lib graphql getTypeFromTypeMap() returns a filter map filtered by GraphQLUnionType 1`] = `Object {}`;
